Fixed wrong urls when download files, It was a problem in firefox. Fixed logout if unathorized, It was executed when any error was fired. Fixed invalid property word-break to word-wrap.

--- a/src/app/core/layout/info-dialog/info-dialog.component.scss
+++ b/src/app/core/layout/info-dialog/info-dialog.component.scss
@@ -65,5 +65,6 @@ span {
   color: #F44336;
 }
 .message {
-  word-break: break-word;
+  word-wrap: break-word;
+  overflow: auto;
 }
